--- a/media.html
+++ b/media.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-
+        <h1>Promedio</h1>
     </header>
     <section>
-        
+
     </section>
+    <script src="/media.js"></script>
 </body>
 </html>
